objects/Session_Time__c.object
<CustomObject>
    <description>Keep track of every session and the time associated with it.</description>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field to the Agent</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>The status of the case at the time of this session.</description>
        <label>Case Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Session Times</relationshipLabel>
        <relationshipName>Session_Times</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Entry</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Time</label>
    <nameField>
        <label>Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>